--- a/Controls/TextTab/MBTabItem.xaml
+++ b/Controls/TextTab/MBTabItem.xaml
@@ -2,6 +2,7 @@
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
+         xmlns:local="clr-namespace:MultiBranchTexter"
          xmlns:c="clr-namespace:MultiBranchTexter.Controls"
          Loaded="TabItem_Loaded"
          MinHeight="24" Padding="0"
@@ -15,7 +16,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer VerticalScrollBarVisibility="Auto">
+        <ScrollViewer VerticalScrollBarVisibility="Auto"
+                      ScrollChanged="sv_ScrollChanged">
             <ScrollViewer.RenderTransform>
                 <TranslateTransform/>
             </ScrollViewer.RenderTransform>
@@ -25,10 +27,15 @@
             </ScrollViewer.InputBindings>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*" MinHeight="160"/>
                 </Grid.RowDefinitions>
-                <ItemsControl x:Name="fragmentContainer" AlternationCount="2147483647"
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition x:Name="lCol"/>
+                    <ColumnDefinition Width="*" MinWidth="80"/>
+                    <ColumnDefinition x:Name="rCol"/>
+                </Grid.ColumnDefinitions>
+                <ItemsControl x:Name="fragmentContainer" Grid.Column="1" AlternationCount="2147483647"
                               ItemsSource="{Binding TextFragments,NotifyOnSourceUpdated=True, 
                     UpdateSourceTrigger=PropertyChanged}">
                     <ItemsControl.ItemTemplate>
@@ -48,7 +55,7 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
 
-                <Border Grid.Row="1" Background="Transparent" 
+                <Border Grid.Row="1" Grid.Column="1" Background="Transparent" 
                         MouseLeftButtonDown="Border_MouseLeftButtonDown" 
                         Cursor="IBeam"/>
             </Grid>
@@ -67,11 +74,7 @@
                 </EventTrigger>
             </ScrollViewer.Triggers>
         </ScrollViewer>
-        <!--<ScrollViewer VerticalScrollBarVisibility="Auto">
-         
-          
-          
-        </ScrollViewer>-->
+        
         <!--下方信息栏-->
         <c:TabEnd x:Name="tabEnd" Grid.Row="1" HorizontalAlignment="Stretch"/>
         <!--这是为了让tabend里的信息可以绑定-->
