--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -185,6 +185,9 @@
     <!--窗体控件模板-->
     <ControlTemplate x:Key="MetroWindowTemplate" TargetType="{x:Type local:MetroWindow}">
         <Grid x:Name="LayoutRoot" Background="{DynamicResource ThemeBrush}">
+            <Grid.DataContext>
+                <vm:SettingViewModel x:Name="svm"/>
+            </Grid.DataContext>
             <Grid.RowDefinitions>
                 <RowDefinition Height="24"/>
                 <RowDefinition Height="Auto"/>
@@ -220,10 +223,8 @@
             </AdornerDecorator>
             <!--设置栏-->
             <Grid x:Name="SettingPanel" Grid.Row="1" Height="0" Opacity="0" Background="#80808080">
-                <Grid.DataContext>
-                    <vm:SettingViewModel x:Name="svm"/>
-                </Grid.DataContext>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
@@ -241,11 +242,11 @@
                                 Background="{DynamicResource BaseBrush}">
                         <TextBlock Text="颜色设置" Margin="4,4,0,0" 
                                    Foreground="{DynamicResource Foreground.BaseBrush}"/>
-                        <Slider x:Name="colorR" Style="{StaticResource colorSliderStyle}"
+                        <Slider Style="{StaticResource colorSliderStyle}"
                                 Foreground="#FFFF0000" Value="{Binding ColorR}"/>
-                        <Slider x:Name="colorG" Style="{StaticResource colorSliderStyle}" 
+                        <Slider Style="{StaticResource colorSliderStyle}" 
                                 Foreground="#FF00FF00" Value="{Binding ColorG}"/>
-                        <Slider x:Name="colorB" Style="{StaticResource colorSliderStyle}" 
+                        <Slider Style="{StaticResource colorSliderStyle}" 
                                 Foreground="#FF0000FF" Value="{Binding ColorB}"/>
                     </StackPanel>
                     <Button Content="还原默认" Command="{Binding ToDefaultCommand}"
@@ -254,6 +255,15 @@
                             HorizontalAlignment="Left"/>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Grid.Column="1" Margin="6">
+                    <StackPanel Orientation="Vertical" Margin="2"
+                                Background="{DynamicResource BaseBrush}">
+                        <TextBlock Text="文本编辑页边距" Margin="4,4,0,0" 
+                                   Foreground="{DynamicResource Foreground.BaseBrush}"/>
+                        <Slider Maximum="200" Style="{StaticResource colorSliderStyle}"
+                                Foreground="{DynamicResource ThemeBrush}" Value="{Binding SideWidth}"/>
+                    </StackPanel>
+                </StackPanel>
+                <StackPanel Orientation="Vertical" Grid.Column="2" Margin="6">
                     <Button Content="查看说明" Command="{Binding OpenIntroCommand}"
                             Template="{StaticResource textButtonTemplate}"
                             Height="24" Margin="2"
