添加了拖入打开功能

--- a/Controls/Window/MainWindow.xaml
+++ b/Controls/Window/MainWindow.xaml
@@ -84,10 +84,14 @@
             <Menu Background="Transparent" Height="28">
                 <MenuItem Header="M0,0 6,6 L0,12 M8,0 14,6 L8,12"
                           ToolTip="导出">
-                    <MenuItem Header="导出为json" Command="{Binding OutputAsJSONCommand}"/>
-                    <MenuItem Header="导出为txt"/>
-                    <MenuItem Header="导出为docx"/>
-                    <MenuItem Header="导出为latex"/>
+                    <MenuItem Header="导出为json" Command="{Binding OutputAsJSONCommand}"
+                              IsEnabled="{Binding IsWorkGridVisible}"/>
+                    <MenuItem Header="导出为txt"
+                              IsEnabled="{Binding IsWorkGridVisible}"/>
+                    <MenuItem Header="导出为docx"
+                              IsEnabled="{Binding IsWorkGridVisible}"/>
+                    <MenuItem Header="导出为latex"
+                              IsEnabled="{Binding IsWorkGridVisible}"/>
                 </MenuItem>
             </Menu>
             <CheckBox Width="28"
@@ -110,11 +114,11 @@
             </CheckBox>
         </StackPanel>
         <!--没有加载文件时的提示文本-->
-        <StackPanel Grid.Row="1" Orientation="Vertical" 
-                    HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="欢迎使用多分支文本编辑器&#x000A;打开导航文件 Ctrl+O&#x000A;新建导航文件 Ctrl+Shift+N"
+        <Grid Grid.Row="1" Background="Transparent" AllowDrop="True" Drop="BgGrid_Drop">
+            <TextBlock Text="欢迎使用多分支文本编辑器&#x000A;打开导航文件 Ctrl+O 或者拖入&#x000A;新建导航文件 Ctrl+Shift+N"
+                       HorizontalAlignment="Center" VerticalAlignment="Center"
                        Foreground="{DynamicResource Foreground.BaseBrush}" FontSize="24"/>
-        </StackPanel>
+        </Grid>
         <!--正式的两个工作控件-->
         <Grid Grid.Row="1" Background="{DynamicResource ThemeBrush}" IsEnabled="{Binding IsWorkGridVisible}">
             <Grid.ColumnDefinitions>
