--- a/Resources/FCCResources.xaml
+++ b/Resources/FCCResources.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:MultiBranchTexter"
-                    xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-                    xmlns:cvt="clr-namespace:MultiBranchTexter.Converters">
+                    xmlns:v="clr-namespace:MultiBranchTexter.View"
+                    xmlns:vvt="clr-namespace:MultiBranchTexter.Converters">
     <!--searchBox的按钮模板-->
     <ControlTemplate x:Key="searchBoxBtnTemp" TargetType="{x:Type Button}">
         <Border x:Name="MainBorder" Background="Transparent">
@@ -49,7 +49,7 @@
     </Style>
 
     <!--yesno答案框-->
-    <ControlTemplate x:Key="yesnoAnswerTemplate" TargetType="{x:Type c:NodeBase}">
+    <ControlTemplate x:Key="yesnoAnswerTemplate" TargetType="{x:Type v:NodeBase}">
         <Border x:Name="ynBd" Background="{DynamicResource NodeBgBrush}" 
                 BorderBrush="{DynamicResource ThemeBrush}" 
                 BorderThickness="1" CornerRadius="4">
@@ -66,7 +66,7 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
     <!--多选后继的单个答案框-->
-    <ControlTemplate x:Key="multiAnswerTemplate" TargetType="{x:Type c:NodeBase}">
+    <ControlTemplate x:Key="multiAnswerTemplate" TargetType="{x:Type v:NodeBase}">
         <Grid Height="24">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="16"/>
