--- a/Resources/Dictionary.xaml
+++ b/Resources/Dictionary.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:MultiBranchTexter"
+                    xmlns:v="clr-namespace:MultiBranchTexter.View"
                     xmlns:cvt="clr-namespace:MultiBranchTexter.Converters">
 
     <!--颜色部分-->
@@ -907,7 +907,7 @@
         <Setter Property="AcceptsTab" Value="True"/>
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="FontSize" Value="{Binding DataContext.TextFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"/>
+        <Setter Property="FontSize" Value="{Binding DataContext.TextFontSize, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type v:MainWindow}}}"/>
         <Setter Property="Foreground" Value="{DynamicResource Text.Foreground.BaseBrush}"/>
         <Setter Property="CaretBrush" Value="{DynamicResource ThemeBrush}"/>
     </Style>
